# Code-academy-Strypes---C-project

./: .gitignore  CMakeLists.txt  README.md
CounterStrike/include/: Game.h  Pistol.h  PrintLogs.h  Vector.h
CounterStrike/src/: BattleField.c  Game.c  main.c
CounterStrike/src/Player/: Pistol.c  Player.c
CounterStrike/src/Utils/: PrintLogs.c  Vector.c
StarCraft/: CMakeLists.txt
StarCraft/include/: BattleField.h  Defines.h  Game.h  ProtossCarrier.h  ProtossPhoenix.h  Ships.h  TerranBCruiser.h  TerranViking.h  Vector.h
StarCraft/src/: BattleField.c  Game.c  ProtossCarrier.c  ProtossPhoenix.c  Ships.c  TerranBCruiser.c  TerranViking.c  Vector.c  main.c
Warcraft/: CMakeLists.txt
Warcraft/include/: Defines.h  Hero.h  SpellCast.h
Warcraft/src/: Hero.c  SpellCast.c  main.c
include/: BattleField.h  Defines.h  Player.h
